--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^3.3.7",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.2.0",
+    "react-collapsible": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
