--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.2.3",
     "bootstrap": "^3.3.7",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.2.0",
