--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.2.3",
     "bootstrap": "^3.3.7",
     "isomorphic-fetch": "^2.2.1",
+    "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-collapsible": "^2.0.4",
     "react-dom": "^16.2.0",
@@ -13,8 +14,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "babel src -d lib",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
@@ -22,6 +25,11 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "jest": "^22.4.2"
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.4.2",
+    "react-test-renderer": "^16.2.0"
   }
 }
